test/Misc/serialized-diagnostics-interpret-mode.code
// RUN: rm -f %t.*

// REQUIRES: language_interpreter

// RUN: %target-language-frontend -typecheck -serialize-diagnostics-path %t.dia %s -verify
// RUN: %target-language-frontend -typecheck -serialize-diagnostics-path=%t_EQ.dia %s -verify
// RUN: not %language_driver -serialize-diagnostics-path %t_interpret_mode.dia %s
// RUN: not %language_driver -serialize-diagnostics-path=%t_EQ_interpret_mode.dia %s

// RUN: diff %t.dia %t_EQ.dia
// RUN: diff %t.dia %t_interpret_mode.dia
// RUN: diff %t.dia %t_EQ_interpret_mode.dia

var x = 1 x = 2   // expected-error {{consecutive statements on a line must be separated by ';'}} {{10-10=;}}
